@@ -1,0 +1,15 @@
+<?xml version="1.0"?> 
+
+<!-- identity transformation -->
+
+<xsl:stylesheet version="1.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+
+<xsl:output encoding="utf-8"/>
+
+<xsl:template match="*">
+  <xsl:copy>
+    <xsl:apply-templates/>
+  </xsl:copy>
+</xsl:template>
+
+</xsl:stylesheet>
